--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,23 @@
 {
-    "name": "This or That",
-    "description": "",
-    "version": "0.0.1",
-    "manifest_version": 3,
-    "browser_action": {
-        "default_popup": "popup.html",
-        "default_icon": "./Data/Image/logo.png"
-    },
-    "icons": {
-        "128": "./Data/Image/logo.png"
-    },
-    "permissions": ["activeTab"]
+  "name": "This or That chrome extention",
+  "description": "A chrome extention to help you decide between two things",
+  "version": "0.2.0",
+  "manifest_version": 3,
+  "icons": {
+    "16": "/assets/logo/logo_16x16.png",
+    "32": "/assets/logo/logo_32x32.png",
+    "48": "/assets/logo/logo_48x48.png",
+    "128": "/assets/logo/logo_128x128.png"
+  },
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "/assets/logo/logo_16x16.png",
+      "32": "/assets/logo/logo_32x32.png",
+      "48": "/assets/logo/logo_48x48.png",
+      "128": "/assets/logo/logo_128x128.png"
+    }
+  },
+  "permissions": ["storage", "activeTab", "scripting"],
+  "host_permissions": ["https://www.google.com/*"]
 }
